[package]
name = "log"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.1", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.4"
futures-util = "0.3.29"
hyper = { version = "0.14.27", features = ["http1"] }
itertools = "0.11.0"
minijinja = { version = "1.0", features = ["loader", "macros"] }
pulldown-cmark = "0.9.3"
regex = "1.11.1"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4"] }
